tests/error_corpus/validation_errors/E252_pause_not_between_syllables.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Syllable pause (^) must be between syllables
@Comment:	Invalid: '^hello' - Pause not between material
*CHI:	^hello .
@End
