tests/error_corpus/parse_errors/E252_caret_at_word_start.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Caret ^ marks syllable pause and must appear MID-WORD
@Comment:	Invalid: "^test" - Caret at word start
@Comment:	Valid: "rhi^noceros" - Syllable pause between rhi and noceros
*CHI:	^test .
@End
